Fix outline of button on mobile

--- a/less/bootstrap-theme/global.less
+++ b/less/bootstrap-theme/global.less
@@ -5,9 +5,17 @@
 a:focus,
 a:hover,
 a:active {
-    outline: 0 none;
     text-decoration: none;
     color: @link-hover-color;
+}
+
+a:focus,
+a:hover,
+a:active,
+button,
+input[type="button"] {
+    outline: none !important;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 b {
